--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,30 @@
 
         </RadioGroup>
 
+        <TextView
+            android:id="@+id/repeat_time_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/repeat_time" />
+
+        <EditText
+            android:id="@+id/minutes_repeat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/repeat_hint"
+            android:inputType="number" />
+        <TextView
+            android:id="@+id/delay_time_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/delay_time" />
+
+        <EditText
+            android:id="@+id/second_delay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/delay_hint"
+            android:inputType="number" />
 
         <LinearLayout
             android:layout_width="wrap_content"
